# aiffel_mini_thon

./: .gitignore  README.md  docker-compose.yaml
model_training/: Dockerfile  README.md  cls_model_lora.py  gen_model_kobert.py  gen_model_lora.py  gen_model_no_lora.py  inference_test.py  pyproject.toml  safetensor_comfirm.py
model_training/models/kogpt2-classification_lora_best/: tokenizer.json  trainer_state.json
model_training/models/kogpt2_chatbot_lora_best/: tokenizer_config.json  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-102258/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-107939/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-11362/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-113620/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-119301/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-124982/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-130663/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-136344/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model_training/results_kogpt2_cls_lora/checkpoint-142025/: adapter_model.safetensors  optimizer.pt  rng_state.pth  (+2 more)
model_training/안쓰는코드/: check_mongo_connection.py  cls_model_train.ipynb  cls_model_train_lora.ipynb  data_insert.py  fetch_data.py  gen_model_train.ipynb  gen_model_train_lora.ipynb  inference.ipynb  train.py
streamlit_1/: Dockerfile  infer_8500.py  infer_8501.py  infer_8502.py  infer_8503.py  infer_8505.py  infer_8507.py  infer_8509.py  infer_8510.py  pyproject.toml  sidebar_config.json
streamlit_1/안쓰는 코드/: infer.py  infer_0806.py  infer_0807_01.py  main - 복사본.py  main 3.py  main.py  main2.py  tt.py
streamlit_3/: pyproject.toml
(+580 files in other folders)
