[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["L3earl <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "^2.2.2"
pymongo = "^4.8.0"
zipfile36 = "^0.1.3"
scikit-learn = "^1.5.1"
transformers = "^4.43.3"
torch = {version = "^2.4.0+cu121", source = "pytorch"}
torchvision = {version = "^0.19.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.4.0+cu121", source = "pytorch"}
datasets = "^2.20.0"
wandb = "^0.17.5"
peft = "^0.12.0"
evaluate = "^0.4.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
