[tool.poetry]
name = "my_streamlit"
version = "0.1.0"
description = ""
authors = ["L3earl <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "^2.2.2"
streamlit = "^1.37.0"
langchain = "^0.2.12"
langchain-core = "^0.2.28"
langchain-openai = "^0.1.20"
transformers = "^4.43.3"
torch = {version = "^2.4.0+cu121", source = "pytorch"}
torchvision = {version = "^0.19.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.4.0+cu121", source = "pytorch"}
safetensors = "^0.4.3"
langchain-community = "^0.2.11"
peft = "^0.12.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
