[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["L3earl <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "^2.2.2"
torch = {version = "^2.4.0+cu121", source = "pytorch"}
torchvision = {version = "^0.19.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.4.0+cu121", source = "pytorch"}
pymongo = "^4.8.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
